Push from C9 session

--- a/ResManSys/client/layouts/HomeLayout.html
+++ b/ResManSys/client/layouts/HomeLayout.html
@@ -1,11 +1,9 @@
 <template name="HomeLayout">
-	<header>
-		<h1>LURMS</h1>
-		{{> loginButtons}}
-	</header>
-	<main>
+	{{> Header}}
+	{{> SideNav}}
+	<main class="main-layout">
 		<div class="billboard">
-			<h2>Lakehead University Residence Management System</h2>
+			<h2>Welcome</h2>
 		</div>
 	</main>
 </template>
