--- a/ResManSys/client/partials/AdminSideNav.html
+++ b/ResManSys/client/partials/AdminSideNav.html
@@ -8,7 +8,7 @@
                 <a href="/manage-request-page"><i class="fa fa-map-o"></i>Manage Requests</a>
             </li>
             <li>
-                <a href="/manage-buildings-page"><i class="fa fa-map-o"></i>Manage Buildings</a>
+                <a href="/manage-buildings-page"><i class="fa fa-map-o"></i>Manage Buildings and Rooms</a>
             </li>
         </ul>
     </nav>
