--- a/ResManSys/client/partials/UserSideNav.html
+++ b/ResManSys/client/partials/UserSideNav.html
@@ -2,7 +2,7 @@
     <nav class="side-nav">
         <ul>
             <li>
-                <a href="/"><i class="fa fa-home"></i>Information</a>
+                <a href="/view-buildings-page"><i class="fa fa-home"></i>View Buildings and Rooms</a>
             </li>
             <li>
                 <a href="/make-request-page"><i class="fa fa-list"></i>Submit Request</a>
