--- a/ResManSys/client/layouts/AdminLayout.html
+++ b/ResManSys/client/layouts/AdminLayout.html
@@ -1,3 +1,4 @@
+<!-- This is a html for an admin page, with some more html in the form of partials before main. -->
 <template name="AdminLayout">
 	{{> Header}}
 	{{> AdminSideNav}}
