--- a/ResManSys/client/layouts/HomeLayout.html
+++ b/ResManSys/client/layouts/HomeLayout.html
@@ -1,11 +1,12 @@
+<!-- This is a html for an home page, with some more html in the form of partials before main. -->
 <template name="HomeLayout">
 	{{> Header}}
 	<main>
 		<div class="billboard">
 			<h2>Welcome</h2>
 			<h4>Lakehead University Residence Management System</h4>
-			<h5>Admin Account: admin@lurms.com Pass:123456</h5>
-			<h5>User Account: user@lurms.com Pass:123456</h5>
+			<!--<h5>Admin Account: admin@lurms.com Pass:123456</h5>
+			<h5>User Account: user@lurms.com Pass:123456</h5>-->
 			<h5>Make sure to say in chat what you've worked on and check to see what others have worked on</h5>
 			<h4><a href=https://thepiratebay.org/torrent/16211528/Westworld.S01E06.PROPER.HDTV.x264-KILLERS[ettv]>Latest Westworld Torrent</a></h4>
 		</div>
