--- a/ResManSys/client/layouts/UserLayout.html
+++ b/ResManSys/client/layouts/UserLayout.html
@@ -1,3 +1,4 @@
+<!-- This is a html for an user page, with some more html in the form of partials before main. -->
 <template name="UserLayout">
 	{{> Header}}
 	{{> UserSideNav}}
