--- a/ResManSys/client/partials/UserSideNav.html
+++ b/ResManSys/client/partials/UserSideNav.html
@@ -3,13 +3,17 @@
     <nav class="side-nav">
         <ul>
             <li>
+                <a href="/view-announcements-page"><i class="fa fa-list"></i>Announcements</a>
+                <!-- <a href="/view-notice-page"><i class="fa fa-map-o"></i>View Notices</a> -->
+            </li>
+            <li>
                 <a href="/view-buildings-page"><i class="fa fa-home"></i>View Buildings and Rooms</a>
             </li>
             <li>
                 <a href="/make-request-page"><i class="fa fa-list"></i>Submit Request</a>
             </li>
             <li>
-                <a href="/view-request-page"><i class="fa fa-map-o"></i>View Request</a>
+                <a href="/view-request-page"><i class="fa fa-list"></i>View Requests</a>
             </li>
         </ul>
     </nav>
