--- a/ResManSys/client/layouts/HomeLayout.html
+++ b/ResManSys/client/layouts/HomeLayout.html
@@ -5,10 +5,8 @@
 		<div class="billboard">
 			<h2>Welcome</h2>
 			<h4>Lakehead University Residence Management System</h4>
-			<!--<h5>Admin Account: admin@lurms.com Pass:123456</h5>
-			<h5>User Account: user@lurms.com Pass:123456</h5>-->
-			<h5>Make sure to say in chat what you've worked on and check to see what others have worked on</h5>
-			<h4><a href=https://thepiratebay.org/torrent/16211528/Westworld.S01E06.PROPER.HDTV.x264-KILLERS[ettv]>Latest Westworld Torrent</a></h4>
+			<img src="https://www.campusvibez.ca/wp-content/uploads/lakehead0.52.jpg" />
+			<h4><a href=https://thepiratebay.org/torrent/16324325/Westworld.S01E08.Trace.Decay.720p.HBO.WEBRip.DD5.1.H.264-monkee[>Latest Westworld Torrent</a></h4>
 		</div>
 	</main>
 </template>
