--- a/ResManSys/client/partials/AdminSideNav.html
+++ b/ResManSys/client/partials/AdminSideNav.html
@@ -3,7 +3,7 @@
     <nav class="side-nav">
         <ul>
             <li>
-                <a href="/"><i class="fa fa-home"></i>Information</a>
+                <a href="/"><i class="fa fa-home"></i>Announcements</a>
             </li>
             <li>
                 <a href="/manage-request-page"><i class="fa fa-map-o"></i>Manage Requests</a>
